@@ -1,5 +1,7 @@
 Changelog for mk-query-digest:
 
+   * Log entries without a Time property crashed --review (issue 263).
+
 2009-02-01: version 0.9.2
 
    * Renamed from mk-log-parser to mk-query-digest.
